@@ -36,7 +36,8 @@
     -->
     <!--Private configurations. -->
 
-    <conf name="common" visibility="private" extends="compile,runtime" description="common artifacts"/>
+    <conf name="common" visibility="private" extends="compile" description="Hadoop common artifacts"/>
+    <conf name="hdfs" visibility="private" extends="compile,runtime" description="HDFS dependent artifacts"/>
     <conf name="javadoc" visibility="private" description="artiracts required while performing doc generation" extends="common"/>
     <conf name="test" extends="common" visibility="private" description="the classpath needed to run tests"/>
     <conf name="system" extends="test" visibility="private" description="the classpath needed to run system tests"/>
@@ -56,7 +57,7 @@
     <dependency org="org.apache.hadoop" name="hadoop-common-test" rev="${hadoop-common.version}" conf="test->default"/>
     <dependency org="org.apache.hadoop" name="hadoop-common-instrumented" rev="${hadoop-common.version}" conf="system->default"/>
 
-    <dependency org="commons-daemon" name="commons-daemon" rev="${commons-daemon.version}" conf="common->default" />
+    <dependency org="commons-daemon" name="commons-daemon" rev="${commons-daemon.version}" conf="hdfs->default" />
 
     <dependency org="org.aspectj" name="aspectjrt" rev="${aspectj.version}" conf="common->default"/>
     <dependency org="org.aspectj" name="aspectjtools" rev="${aspectj.version}" conf="common->default"/>
