@@ -321,6 +321,9 @@ Trunk (unreleased changes)
     HDFS-1865. Share LeaseRenewer among DFSClients so that there is only a
     LeaseRenewer thread per namenode per user.  (szetszwo)
 
+    HDFS-1917. Separate hdfs jars from common in ivy configuration.  (Eric Yang
+    via szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
